# build_bot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Caddyfile  README.md  activate_windows_venv.sh  clean_artifacts.sh  docker-compose.yml  linuxbot.dockerfile  master.sh  pyproject.toml  requirements-master.txt  requirements-worker.txt  requirements.txt  setup.ps1  setup.sh  worker.ps1  worker.sh  worker_heartbeat.py
.github/workflows/: deploy.yml  flake8.yml  linting.yml  validations.yml
arm_linux_slave/: buildbot.tac
arm_ubuntu_slave/: buildbot.tac
linux_slave/: buildbot.tac
mac_slave/: buildbot.tac
master/: Dockerfile  buildbot.tac  custom_steps.py  maintenance.html  master.cfg  pyproject.toml
slave/: buildbot.tac
ubuntu_slave/: buildbot.tac
win_slave/: buildbot.tac
worker/: buildbot.tac  pyproject.toml
worker/linux/: halide-buildbot-worker.service.in  install.sh
worker/macos/: halide_buildbot.sh.in  install.cmake  install.sh  org.halide-lang.buildbot.plist.in
worker/windows/: .vsconfig  install.ps1  winget-packages.json
