[project]
name = "halide-build-bot"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff~=0.15.0",
    "ty~=0.0.16",
    "pre-commit~=4.2",
]

[tool.ruff]
line-length = 120
extend-include = ["*.tac", "*.cfg"]

[tool.ruff.lint]
ignore = [
    "F402", ## Import shadowed by loop variable (os)
]

[tool.ty.environment]
extra-paths = ["master"]

[tool.ty.src]
include = ["master/custom_steps.py"]

[tool.bandit]
targets = ["master/master.cfg", "master/custom_steps.py", "master/buildbot.tac", "worker/buildbot.tac"]
skips = [
    "B101",  # assert_used: asserts are intentional for config validation
]

[tool.vulture]
paths = ["master/master.cfg", "master/custom_steps.py", "master/buildbot.tac", "worker/buildbot.tac"]
min_confidence = 80

[tool.codespell]
skip = ".venv,*.pyc,__pycache__"

[tool.uv.workspace]
members = ["master", "worker"]
